# mknames

./: README.md  pyproject.toml
arch/mknames-git/: .gitignore  PKGBUILD
src/mknames/: __init__.py  cli.py  names.py
src/mknames/providers/: __init__.py  fra.py  types.py  usa.py
