[project]
name = "mknames"
version = "0.1.0"
description = "Generate firstnames and lastnames based on french statistics"
authors = [{ name = "Tehoor Marjan", email = "tehoor.marjan@gmail.com" }]
dependencies = [
    "click>=8.1.8",
    "hishel>=0.1.2",
    "httpx>=0.28.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "platformdirs>=4.3.7",
]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

[project.scripts]
mknames = "mknames.cli:main"

[project.optional-dependencies]
optional = [
    "numexpr>=2.10.2",
]
[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "ipykernel>=6.29.5",
    "pyright>=1.1.399",
    "pandas-stubs>=2.2.3.250308",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79

[tool.pdm]
distribution = true

[tool.pyright]
# Removed global restrictions to allow file-specific configurations to take effect.
include = ["src"]
typeCheckingMode = "strict"
